--- a/simple-t3blog/package.json
+++ b/simple-t3blog/package.json
@@ -26,13 +26,19 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "^8.34.0",
+    "eslint": "^8.38.0",
     "eslint-config-next": "^13.2.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.14",
-    "prettier": "^2.8.1",
+    "prettier": "2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.9.5"
