--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "simple-t3blog",
   "version": "0.1.0",
@@ -17,8 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
-    "sass": "^1.59.3",
-    "zod": "^3.20.6"
+    "sass": "^1.59.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.1",
