--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "simple-t3blog",
   "version": "0.1.0",
@@ -11,37 +10,38 @@
   },
   "dependencies": {
     "graphql": "^16.6.0",
-    "graphql-request": "^5.2.0",
-    "html-react-parser": "^3.0.13",
+    "graphql-request": "^6.1.0",
+    "html-react-parser": "^4.0.0",
     "moment": "^2.29.4",
-    "next": "^13.2.1",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-multi-carousel": "^2.8.2",
-    "sass": "^1.59.3"
+    "react-multi-carousel": "^2.8.4",
+    "sass": "^1.62.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.1",
-    "@types/node": "^18.14.0",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.53.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.38.0",
-    "eslint-config-next": "^13.2.1",
+    "@types/eslint": "^8.40.0",
+    "@types/node": "^20.2.5",
+    "@types/prettier": "^2.7.3",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "postcss": "^8.4.14",
-    "prettier": "2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.5"
+    "postcss": "^8.4.24",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.8.0"
